  Mas)
* Template projects: there can be several of them, and users
  registering new projects can pick which template to clone from for
  their new projects (Roland Mas, Coclico)
* Reorganised, modular Apache configuration (Roland Mas)
* New User Widget : documents monitoring (Capgemini)
* RPM packages for Red Hat (and derived) distributions

FusionForge-5.0.2:
* Maintenance release, bugfixes mostly.

FusionForge-5.0.1:
* Maintenance release, bugfixes and translations only.

FusionForge-5.0:
* New projectlabels plugin, to tag projects with snippets of
  user-defined HTML (developed for/sponsored by Adullact)
* New extratabs plugin, to add tabs with links to arbitrary URLs
  (Adullact again)
* New globalsearch, allowing cross-forge searching of projects
* Users can log in with their email address (in addition to login
  name) if sys_require_unique_email is true (developed for/sponsored by AdaCore)
* Site admin can now optionally enforce the acceptance of terms of use
  on account creation (AdaCore again)
* Site admin can now optionnally block anonymous downloads from the
  FRS (AdaCore again)
* New command-line scripts to inject users, groups and file releases
  into the database from text files (AdaCore again)
* Trackers: The list of fields displayed when browsing the list of artifacts
  can now be defined (Alcatel-Lucent)
* Trackers: The description field can now be updated/corrected (Alcatel-Lucent)
* Trackers: It is now possible to force a custom field to be mandatory (Alcatel-Lucent)
* Trackers: The values for 'select box' custom fields can now be reordered (Alcatel-Lucent)
* Trackers: A workflow on the status field (when overwritten) can be set. Allowed
  transition between values can be defined and allowed per roles (Alcatel-Lucent)
* Trackers: A new type of extra field has been added: Relation between artifact. 
  This type allow to create a relation between artifacts. Backwards relation can
  also be visible (Alcatel-Lucent)